# Traitement_image_2

./: .gitignore  CMakeLists.txt  README.md
include/: image_treatment.hpp  sift_comparator.hpp  squares.hpp
src/: image_treatment.cpp  main.cpp  main_test_opencv.cpp  pattern_matcher.cpp  sift_comparator.cpp  squares.cpp
